fix overflow hidden by removing it

--- a/index.css
+++ b/index.css
@@ -77,7 +77,6 @@ body {
     flex-direction: column;
     height: 100dvh;
     margin-inline: auto;
-    overflow: hidden;
     max-width: var(--max-content-width);
 }
 
